[BACKOUT] MoveAndUpdateClosure::do_addr calls function with side-effects in an assert

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 17
    • Affects Version/s: 17
    • Component/s: hotspot
    • gc
    • b14

      Large perf regression observed for vmTestbase/gc/gctests/BigChains/BigChains.java in debug build, as reported in JDK-8263687

      Before JDK-8245025:
      527.89user 12.63system 3:44.40elapsed 240%CPU (0avgtext+0avgdata 972888maxresident)k
      After JDK-8245025:
      6213.88user 13.82system 12:09.57elapsed 853%CPU (0avgtext+0avgdata 1077724maxresident)k

            Assignee:
            Albert Yang
            Reporter:
            Albert Yang
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: