8263723: [BACKOUT] MoveAndUpdateClosure::do_addr calls function with side-effects in an assert

Reviewed-by: tschatzl